2015-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (FlipImage): Possibly quiet case #4 of
	Coverity 10311 "Untrusted value as argument".

	* magick/utility.c (Base64Encode): Quiet Coverity 10296 and 10272
	"Use of untrusted scalar value".

2015-04-22  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobMSBShort, ReadBlobLSBShort): Attempt
	to fix various "tainted" or "untrusted" variables, e.g., in
	coders/gif.c and coders/sgi.c by masking off all but the lower
	16 bits returned.

2015-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tim.c (ReadTIMImage): Make TIM reader more robust against
	EOF.

	* coders/sct.c (ReadSCTImage): Make SCT reader more robust against
	EOF.

	* coders/pwp.c (ReadPWPImage): Test loop for EOF.

	* coders/otb.c (ReadOTBImage): Make error reporting a bit more
	robust.

	* coders/jnx.c (ExtractTileJPG): Add some EOF checks.

	* coders/cut.c (ReadCUTImage): Limit width/height to range of
	signed integer.

	* tests/rwfile.tap: Add a R/W file test for ART.

	* tests/rwblob.tap: Add a R/W blob test for ART.

	* coders/art.c (ReadARTImage): Improve error checking.

2015-04-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sun.c (ReadSUNImage): Try to quench Coverity 10280
	"Untrusted loop bound".

	* coders/mpc.c (ReadMPCImage): Port MIFF header reading fixes.

2015-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): MIFF reader failed to read some
	MIFF headers properly.  Fixes SourceForge issue #298 "invalid next
	size (normal)/memory corruption".

2015-04-18  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Fix Coverity 55862 "Resource leak"
	and quiet Coverity 55825, 55826, and 55827 "Data race condition".

2015-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetToken): Fix an overlapping strlcpy() which