@@ -38,6 +38,9 @@
 <p>2015-04-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/utility.c (GlobExpression): See if testing for null
+terminating character quiets Coverity 10246 &quot;Untrusted value as
+argument&quot;.</li>
 <li>magick/transform.c (FlipImage): Possibly quiet case #4 of
 Coverity 10311 &quot;Untrusted value as argument&quot;.</li>
 <li>magick/utility.c (Base64Encode): Quiet Coverity 10296 and 10272
